feat(layout): set up basic game layout
This commit introduces the basic HTML structure and CSS styling
for the etch-a-sketch game canvas.

The changes include:
- Adding a game container in `index.html`
- Creating a canvas element in `index.html`
- Adding basic CSS for the canvas and cells in `style.css`
- Populating the canvas with cells using JavaScript in `script.js`

--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <script src="script.js" defer></script>
     <title>Etch-a-sketch</title>
   </head>
-  <body></body>
+  <body>
+    <div class="layout">
+      <div class="game">
+        <div class="game__canvas" data-id="canvas"></div>
+      </div>
+    </div>
+  </body>
 </html>
