feat(game): implement grid size and color controls
This commit introduces new features to control the etch-a-sketch game:

- Added "New grid" button to allow users to change the grid size.
- Added "Black color" button to enable drawing in black color.
- Added "Random color" button to enable drawing in random colors.

These changes enhance the user experience by providing more
customization options for the game.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <body>
     <div class="layout">
       <div class="game">
+        <button class="game__grid-size-btn" data-id="grid-size-btn">
+          New grid
+        </button>
+        <button class="game__black-color-btn" data-id="black-color-btn">
+          Black color
+        </button>
+        <button class="game__random-color-btn" data-id="random-color-btn">
+          Random color
+        </button>
         <div class="game__canvas" data-id="canvas"></div>
       </div>
     </div>
