--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
         <button class="game__grid-size-btn" data-id="grid-size-btn">
           New grid
         </button>
-        <button class="game__black-color-btn" data-id="black-color-btn">
-          Black color
-        </button>
         <button class="game__random-color-btn" data-id="random-color-btn">
           Random color
+        </button>
+        <button
+          class="game__darkening-effect-btn"
+          data-id="darkening-effect-btn"
+        >
+          Darkening effect
         </button>
         <div class="game__canvas" data-id="canvas"></div>
       </div>
