feat(style): enhance game layout and styling
- Reorganized game elements in index.html for better structure
- Added a title "etch a sketch" above the canvas
- Grouped buttons within a `game__buttons` div
- Introduced a consistent `activeClass` in script.js for button states
- Applied new styles in style.css for layout, game container, title,
buttons, and active button state
- Imported "lobster" font from google fonts for the title
- Refined button styles and canvas appearance

--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
   <body>
     <div class="layout">
       <div class="game">
-        <button class="game__grid-size-btn" data-id="grid-size-btn">
-          New grid
-        </button>
-        <button class="game__random-color-btn" data-id="random-color-btn">
-          Random color
-        </button>
-        <button
-          class="game__darkening-effect-btn"
-          data-id="darkening-effect-btn"
-        >
-          Darkening effect
-        </button>
+        <div class="game__title">Etch A Sketch</div>
         <div class="game__canvas" data-id="canvas"></div>
+        <div class="game__buttons">
+          <button class="game__button" data-id="grid-size-btn">New grid</button>
+          <button class="game__button" data-id="random-color-btn">
+            Random
+          </button>
+          <button class="game__button" data-id="darkening-effect-btn">
+            Darkening
+          </button>
+        </div>
       </div>
     </div>
   </body>
